changes made on landing page card navigations

--- a/layouts/partials/landingpage/product-cards.html
+++ b/layouts/partials/landingpage/product-cards.html
@@ -8,11 +8,13 @@
 		<p class="card-text"><ul class="landing-list">
 		  <!-- Change links HERE -->
 		  <!-- <li class="link-list"><a href="/refguide/quickstart-guide/">Quickstart</a></li> -->
-		  <li class="link-list"><a href="/metamodel-concept/quickstart-guide/">Meta Model Concept</a></li>
-		  <li class="link-list"><a href="/refguide/metamodel-design/">Meta Model Design</a></li>
-		  <li class="link-list"><a href="/refguide/metamodel-usage/">Metamodel Usage</a></li></ul></p>
+		  <li class="link-list"><a href="/modularmom/metamodel-concept/">Meta Model Concept</a></li>
+		  <li class="link-list"><a href="/modularmom/metamodel-design/">Meta Model Design</a></li>
+		  <li class="link-list"><a href="/modularmom/metamodel-usage/">Metamodel Usage</a></li>
+		  <li class="link-list"><a href="/modularmom/metadata-design/">Metadata Design</a></li></ul></p>
 	  </div>
 	</div>
+	
 	<!--
 	Studio 9 card
 	<div class="card w-50">
