--- a/layouts/docs/landingpage.html
+++ b/layouts/docs/landingpage.html
@@ -53,9 +53,9 @@
                 <br>
                 <!-- <h5 class="lp">{{ .Page.Description}}</h5> -->
               </div>
-              <div class="col-lg-4 col-xl-3">
+              <!-- <div class="col-lg-4 col-xl-3">
                 <img src="/images/docs-extended-small.png">
-              </div>
+              </div> -->
             </div>
           <div class="row my-row">
               <div class="col cards-layout">
