--- a/layouts/partials/landingpage/product-cards.html
+++ b/layouts/partials/landingpage/product-cards.html
@@ -3,7 +3,7 @@
 	<div class="card w-50">
 	  <div class="card-body">
 		<div class="row">
-		  <img class="my-icon" src="/icons/mx-pro-logo.png"><a href="/refguide/"><h4 class="card-title-w-50">MOD MOM</h4></a>
+		  <img class="my-icon" src="/icons/mx-pro-logo.png"><a href="/modularmom/"><h4 class="card-title-w-50">MOD MOM</h4></a>
 		</div>
 		<p class="card-text"><ul class="landing-list">
 		  <!-- Change links HERE -->
