Forward navigaton for landing page and mod mom guide page

--- a/layouts/partials/landingpage/product-cards.html
+++ b/layouts/partials/landingpage/product-cards.html
@@ -8,10 +8,13 @@
 		<p class="card-text"><ul class="landing-list">
 		  <!-- Change links HERE -->
 		  <!-- <li class="link-list"><a href="/refguide/quickstart-guide/">Quickstart</a></li> -->
-		  <li class="link-list"><a href="/modularmom/metamodel-concept/">Meta Model Concept</a></li>
-		  <li class="link-list"><a href="/modularmom/metamodel-design/">Meta Model Design</a></li>
-		  <li class="link-list"><a href="/modularmom/metamodel-usage/">Metamodel Usage</a></li>
-		  <li class="link-list"><a href="/modularmom/metadata-design/">Metadata Design</a></li></ul></p>
+		  <li class="link-list"><a href="/release-announcement/">Realease Announcement</a></li>
+		  <li class="link-list"><a href="/release-notes/">Release Notes</a></li>
+		  <li class="link-list"><a href="/modularmom/">ModMOM Guide</a></li>
+		  <li class="link-list"><a href="/modmom-how-tos/">Mod MOM How-tos</a></li>
+		  <li class="link-list"><a href="/developer-guide/">Developer Guide</a></li>
+		  <li class="link-list"><a href="/modmom-modules/">Mod MOM Modules</a></li>
+		  <li class="link-list"><a href="/api-and-sdk/">APIs and SDK</a></li></ul></p>
 	  </div>
 	</div>
 	
