removed Documents folder from content

--- a/layouts/partials/landingpage/product-cards.html
+++ b/layouts/partials/landingpage/product-cards.html
@@ -3,11 +3,11 @@
 	<div class="card w-50">
 	  <div class="card-body">
 		<div class="row">
-		  <img class="my-icon" src="/icons/mx-pro-logo.png"><a href="/modularmom/"><h4 class="card-title-w-50">MOD MOM</h4></a>
+		  <!-- <img class="my-icon" src="/icons/mx-pro-logo.png"> -->
+		  <a href="/modularmom/"><h4 class="card-title-w-50">MOD MOM</h4></a>
 		</div>
 		<p class="card-text"><ul class="landing-list">
 		  <!-- Change links HERE -->
-		  <!-- <li class="link-list"><a href="/refguide/quickstart-guide/">Quickstart</a></li> -->
 		  <li class="link-list"><a href="/release-announcement/">Realease Announcement</a></li>
 		  <li class="link-list"><a href="/release-notes/">Release Notes</a></li>
 		  <li class="link-list"><a href="/modularmom/">ModMOM Guide</a></li>
